--- a/source/example-smart-app/launch.html
+++ b/source/example-smart-app/launch.html
@@ -4,13 +4,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>
-    <title>Example-SMART-App</title>
+    <title>htpex Example-SMART-App</title>
   </head>
   <body>
     <script src='./lib/fhir-client.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': 'df7c5a17-52dd-4c88-8a32-cdfb557ba758',
+        'client_id': 'd2548849-b55e-4477-ae71-d53a710d6736',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
